--- a/MapsLogin/app/src/main/AndroidManifest.xml
+++ b/MapsLogin/app/src/main/AndroidManifest.xml
@@ -13,11 +13,16 @@
         android:theme="@style/Theme.MapsLogin"
         tools:targetApi="31">
         <activity
+            android:name=".HomePage"
+            android:exported="false" />
+        <activity
+            android:name=".SignIn"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
